syntax = "proto3";

package user;
import "Proto/cdr/cdr.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/leepala/OldGeneralBackend/Proto/user";

service User {
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoReply) {}
    rpc UpdateUserInfo(UpdateUserInfoRequest) returns (UpdateUserInfoReply) {}
    rpc InitUserInfo(InitUserInfoRequest) returns (google.protobuf.Empty){}
}

message GetUserInfoRequest {
    string RequestId = 1;
    int64 RequestTime = 2;
    string UserId = 3;
}

message GetUserInfoReply {
    string RequestId = 1;
    int64 ReplyTime = 2;
    cdr.UserBasicInfo UserInfo = 3;
}

message UpdateUserInfoRequest {
    string RequestId = 1;
    int64 RequestTime = 2;
    optional string UserName = 3;
    optional string UserAvatar = 4;
    optional string UserGender = 5;
    optional string UserSignature = 6;
}

message UpdateUserInfoReply {
    string RequestId = 1;
    int64 ReplyTime = 2;
}

message InitUserInfoRequest {
    string UserId = 1;
}
